--- a/index.html
+++ b/index.html
@@ -45,14 +45,18 @@
             </div>
         </div>
     </nav>
-    <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://themewagon.github.io/foodfun/assets/images/banner-bg.jpg" class="d-block w-100"
-                    alt="">
+    <section class="banner-area text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h6 class="text-white">the most interesting food in the world</h6>
+                    <h1><span class="prime-color">Discover the flavors</span><br>
+                        <span class="style-change"><span class="prime-color">of Village foods</span></span>
+                    </h1>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
     <section id="example" class="py-5">
         <div class="container">
             <div class="row align-items-center">
