--- a/index.html
+++ b/index.html
@@ -103,70 +103,74 @@
                     </div>
                 </div>
             </div>
-            <section class="menu-grid">
-
-                <!-- ------------ ROW 1 ------------ -->
-                <div class="menu-card">
-                    <img src="https://themewagon.github.io/foodfun/assets/images/food1.jpg" alt="">
-                    <div class="menu-content">
-                        <h3>Mexican Eggrolls</h3>
-                        <span class="price">$14.50</span>
-                        <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+            <!-- ------------ ROW 1 ------------ -->
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="menu-card">
+                        <img src="https://themewagon.github.io/foodfun/assets/images/food1.jpg" alt="">
+                        <div class="menu-content">
+                            <h3>Mexican Eggrolls</h3>
+                            <span class="price">$14.50</span>
+                            <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="menu-card">
-                    <img src="https://themewagon.github.io/foodfun/assets/images/food2.jpg" alt="">
-                    <div class="menu-content">
-                        <h3>Chicken Burger</h3>
-                        <span class="price">$9.50</span>
-                        <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="menu-card">
+                        <img src="https://themewagon.github.io/foodfun/assets/images/food2.jpg" alt="">
+                        <div class="menu-content">
+                            <h3>Chicken Burger</h3>
+                            <span class="price">$9.50</span>
+                            <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="menu-card">
-                    <img src="https://themewagon.github.io/foodfun/assets/images/food3.jpg" alt="">
-                    <div class="menu-content">
-                        <h3>Tofu Lasagna</h3>
-                        <span class="price">$12.50</span>
-                        <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="menu-card">
+                        <img src="https://themewagon.github.io/foodfun/assets/images/food3.jpg" alt="">
+                        <div class="menu-content">
+                            <h3>Tofu Lasagna</h3>
+                            <span class="price">$12.50</span>
+                            <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                        </div>
                     </div>
                 </div>
-
-                <!-- ------------ ROW 2 (NEW) ------------ -->
-                <div class="menu-card">
-                    <img src="https://themewagon.github.io/foodfun/assets/images/food4.jpg" alt="">
-                    <div class="menu-content">
-                        <h3>Pepper Potatoes</h3>
-                        <span class="price">$15.20</span>
-                        <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+            </div>
+            <!-- ------------ ROW 2 ------------ -->
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="menu-card">
+                        <img src="https://themewagon.github.io/foodfun/assets/images/food4.jpg" alt="">
+                        <div class="menu-content">
+                            <h3>Pepper Potatoes</h3>
+                            <span class="price">$15.20</span>
+                            <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="menu-card">
-                    <img src="https://themewagon.github.io/foodfun/assets/images/food5.jpg" alt="">
-                    <div class="menu-content">
-                        <h3>Bean salad</h3>
-                        <span class="price">$10.99</span>
-                        <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="menu-card">
+                        <img src="https://themewagon.github.io/foodfun/assets/images/food5.jpg" alt="">
+                        <div class="menu-content">
+                            <h3>Bean salad</h3>
+                            <span class="price">$10.99</span>
+                            <p>Face together given moveth divided form Of Seasons that fruitful.</p>
+                        </div>
                     </div>
                 </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="menu-card">
+                        <img src="https://themewagon.github.io/foodfun/assets/images/food6.jpg" alt="">
+                        <div class="menu-content">
+                            <h3>Beatball hoagie</h3>
+                            <span class="price">$30.99</span>
+                            <p>Rich dessert with sweet toppings.</p>
 
-                <div class="menu-card">
-                    <img src="https://themewagon.github.io/foodfun/assets/images/food6.jpg" alt="">
-                    <div class="menu-content">
-                        <h3>Beatball hoagie</h3>
-                        <span class="price">$30.99</span>
-                        <p>Rich dessert with sweet toppings.</p>
-
+                        </div>
                     </div>
                 </div>
-                <br><br>
-
-            </section>
+            </div>
             <div class="hero-slider">
-
-
                 <div class="slide active"
                     style="background-image: url('https://themewagon.github.io/foodfun/assets/images/reservation-bg.jpg');">
                     <div class="hero-content">
